<resources>
    <string name="app_name">Newsify</string>
    <string name="home">HOME</string>
    <string name="headlines">Headlines</string>
    <string name="business">Business</string>
    <string name="sports">Sports</string>
    <string name="health">Health</string>
    <string name="entertainment">Entertainment</string>
    <string name="technology">Technology</string>

    <string name="home_menu">Home</string>
    <string name="category">Category</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="search_here">Search Here…</string>
    <string name="categories">Categories</string>
    <string name="news_title">NEWS TITLE</string>
    <string name="news_description">News description</string>


</resources>