<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.CategoryActivityFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="24dp"
                android:columnCount="2">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/health_category"
                    android:layout_width="0dp"
                    android:layout_height="160dp"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill_horizontal"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    app:cardBackgroundColor="@color/card_background"
                    app:cardCornerRadius="5dp">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="140dp"
                            android:contentDescription="@string/health"
                            android:src="@drawable/health" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:fontFamily="@font/ubuntu"
                            android:text="@string/health"
                            android:textColor="@color/primary_text" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/business_category"
                    android:layout_width="0dp"
                    android:layout_height="160dp"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill_horizontal"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    app:cardBackgroundColor="@color/card_background"
                    app:cardCornerRadius="5dp">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="140dp"
                            android:contentDescription="@string/health"
                            android:src="@drawable/business" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:fontFamily="@font/ubuntu"
                            android:text="@string/business"
                            android:textColor="@color/primary_text" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/sports_category"
                    android:layout_width="0dp"
                    android:layout_height="160dp"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill_horizontal"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    app:cardBackgroundColor="@color/card_background"
                    app:cardCornerRadius="5dp">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="140dp"
                            android:contentDescription="@string/health"
                            android:src="@drawable/running" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:fontFamily="@font/ubuntu"
                            android:text="@string/sports"
                            android:textColor="@color/primary_text" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/entertainment_category"
                    android:layout_width="0dp"
                    android:layout_height="160dp"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill_horizontal"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    app:cardBackgroundColor="@color/card_background"
                    app:cardCornerRadius="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="140dp"
                            android:contentDescription="@string/health"
                            android:src="@drawable/entertaining"
                            tools:ignore="ImageContrastCheck" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:fontFamily="@font/ubuntu"
                            android:text="@string/entertainment"
                            android:textColor="@color/primary_text" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/technology_category"
                    android:layout_width="0dp"
                    android:layout_height="160dp"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill_horizontal"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    app:cardBackgroundColor="@color/card_background"
                    app:cardCornerRadius="5dp">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="140dp"
                            android:contentDescription="@string/technology"
                            android:src="@drawable/technology"
                            tools:ignore="ImageContrastCheck" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:fontFamily="@font/ubuntu"
                            android:text="@string/technology"
                            android:textColor="@color/primary_text" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </com.google.android.material.card.MaterialCardView>

            </GridLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>